--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/marcbachmann/node-html-pdf.git"
+    "url": "https://github.com/Profab/node-html-pdf.git"
   },
   "keywords": [
     "html",
